[gd_scene load_steps=6 format=3 uid="uid://bvqxj8n3qwxhm"]

[ext_resource type="Script" path="res://scripts/components/BasicAirplane.gd" id="1_0x8qm"]

[sub_resource type="BoxMesh" id="BoxMesh_1h2k3"]
size = Vector3(0.2, 0.2, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_1h2k3"]
size = Vector3(0.2, 0.2, 1.5)

[sub_resource type="BoxMesh" id="BoxMesh_2w4r5"]
size = Vector3(2.0, 0.1, 0.4)

[sub_resource type="BoxShape3D" id="BoxShape3D_2w4r5"]
size = Vector3(2.0, 0.1, 0.4)

[node name="BasicAirplane" type="RigidBody3D"]
collision_layer = 2
collision_mask = 1
mass = 0.05
script = ExtResource("1_0x8qm")
airplane_weight = 50.0
drag_coefficient = 0.02
lift_coefficient = 0.1

[node name="FuselageMesh" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1h2k3")

[node name="FuselageCollision" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_1h2k3")

[node name="WingLeftMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
mesh = SubResource("BoxMesh_2w4r5")

[node name="WingLeftCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
shape = SubResource("BoxShape3D_2w4r5")

[node name="WingRightMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
mesh = SubResource("BoxMesh_2w4r5")

[node name="WingRightCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
shape = SubResource("BoxShape3D_2w4r5")